--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://unpkg.com/scrollreveal"></script>
   <link rel="stylesheet" href="style.css">
 
-  <title>Document</title>
+  <title>The Rosa</title>
 </head>
 
 <body>
